2006-09-13  Brandon Bergren <bdragon@mailsnare.net>

	* slime.el (slime-filename-translations): Fix docstring

2006-09-13  Bob Halley <halley@play-bow.us>

	* swank.lisp (format-iso8601-time): Properly handle non integer
	time zones.

2006-09-13  Taylor R Campbell <campbell@mumble.net>

	* slime.el (slime-init-output-buffer): Initial directory and
	package stacks should be empty.
	(slime-repl-push-package): Push the current package, as opposed to
	the new package, and set the new package to whatever the user
	specified.
	(slime-repl-pop-package): Set the current package to the top of
	the package stack, unless it's empty.

2006-09-13  Daniel Koning <dkoning@seas.smu.edu>

	* slime.el (slime-repl-disconnect): New repl shortcut.

2006-09-13  Marco Baringer  <mb@bese.it>

	* slime.el (slime-open-inspector): Added a slime-part-number
	property to the topline so that you can slime-inspector-copy-down
	the object being inspected. There are some cases where we have an
	object in the inspector and we'd like to dump it to the repl but
	we can't get at it through other means (like in back-traces).
	(slime-insert-xrefs): Specify which file the item is in (when that
	information is available).

	* swank.lisp (format-arglist-for-echo-area): Instead of using
	let+first+rest to destructure a form use destructuring-bind.
	(lookup-presented-object): Added (declare (special
	*inspectee-parts*)) to silence openmcl's compiler.
	(inspect-object): Generate, and send to emacs, an ID for the
	object being inspected.

2006-09-01  Nikodemus Siivola <nikodemus@random-state.net>

	* slime.el (slime-repl-matching-input-regexp): Use the portion
	between slime-repl-input-mark and point for history search, not
	the entire input. Patch by Ivan Shvedunov.

	* swank-sbcl.lisp: Declaim SB-C:INSERT-STEP-CONDITIONS 0 for to
	hide Swank while stepping and avoid endless mutex-acquisition
	loops.

2006-08-27  Helmut Eller  <heller@common-lisp.net>
